<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_dark"
    tools:context="com.jlvr.juanluis.tfg_championshipleague.GoleadoresFireBase.goleadoresFB">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_dark"
        android:textColor="#ffffffff"
        android:text="@string/liga"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_dark"
        android:textColor="#ffffffff"
        android:text="@string/nombreJG"
        tools:layout_editor_absoluteX="87dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/listaG"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Goles"
        tools:layout_editor_absoluteY="31dp"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        android:background="@android:color/holo_red_dark"
        android:textColor="#ffffffff"
        android:layout_marginLeft="18dp"/>

    <Button
        android:id="@+id/bng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonNuevoG"
        tools:layout_editor_absoluteX="242dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/listaG"/>

    <LinearLayout
        android:id="@+id/listaG"
        android:layout_width="338dp"
        android:layout_height="433dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="48dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/lstgoleadores"
            android:layout_width="262dp"
            android:layout_height="301dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="-141dp"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
