<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jlvr.juanluis.tfg_championshipleague.ResultadosFireBase.resultadosFB"
    android:background="@android:color/holo_green_dark"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <TextView
        android:id="@+id/textView"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:background="@android:color/holo_red_dark"
        android:text="@string/resultados"
        android:textAlignment="center"
        android:textColor="#ffffffff"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="29dp"/>

    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="374dp"
        android:layout_height="66dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/lista">

        <LinearLayout
            android:id="@+id/texto"
            android:layout_width="103dp"
            android:layout_height="match_parent"
            android:layout_below="@id/lista"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="16dp">

        </LinearLayout>

        <Button
            android:id="@+id/buttonOrdenar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:elevation="24dp"
            android:text="@string/buttonOrdenar"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="404dp"/>

        <Button
            android:id="@+id/buttonAnyadi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/anyadirRes"
            tools:ignore="MissingConstraints"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lista"
        android:layout_width="356dp"
        android:layout_height="337dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        android:weightSum="1"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        android:layout_marginTop="8dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/lstResultados"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="-141dp"
            />
    </LinearLayout>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline4"
        app:layout_constraintGuide_begin="74dp"
        android:orientation="horizontal"/>


</android.support.constraint.ConstraintLayout>
